refactored element in index and script for better functionality

--- a/index.html
+++ b/index.html
@@ -21,13 +21,12 @@
     <section class="main-content" id="page-content">
         <h1>Coding Quiz Challenge</h1>
 
- 
-        
-
-
         <!-- Quiz questions and Answer Choices, populated on start -->
-        <div id="quiz-container"></div>
-
+        <div id="quiz-container">
+            <div id="quiz-intro"></div>
+            <div id="quiz-questions"></div>
+            <div id="high-score"></div>
+        </div>
 
     </section> 
    
