question and answer choices append to page, moves to next question on click, ends quiz when all questions are answered

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <!-- Quiz questions and Answer Choices, populated on start -->
         <div id="quiz-container">
             <div id="quiz-intro"></div>
-            <div id="quiz-questions"></div>
+            <div id="quiz-questions">
+                <div id="question"></div>
+                <ul id="answer-choices"></ul>
+                <div id="answer-response"></div>
+            </div>
             <div id="high-score"></div>
         </div>
 
