--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div id="high-scores">
             HIGH SCORES
         </div>
+        <div id ="question-counter">
+        </div>
+
+        </div>
         <div id="timer"></div>
     </header>
 
